--- a/menu.css
+++ b/menu.css
@@ -25,8 +25,43 @@
 }
 /* Top menu styles */
 
-#menu-wrap{
+.menu-wrap{
     position:relative;
+}
+
+#gsrm-top-menu{
+    margin-top: 44px;
+}
+
+.menu-wrap h2{
+  
+    width: 30px; height: 30px;
+    padding: 7px;
+    background: #45484d; /* Old browsers */
+    background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
+    background: linear-gradient(top,  #45484d 0%,#000000 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    position: absolute;top:-45px;right:1em;
+ 
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+
+ 
+  -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+   
+}
+
+.menu-wrap h2 a{
+     font: 0/0 a;
+    text-shadow: none;
+    color: transparent;    
+    background: transparent url(images/icon_list_bullets.png) no-repeat 0 0;
+    display:block;width:30px;height:30px;
 }
 
 #gsrm-top-menu li, 
@@ -73,7 +108,9 @@
 }
 
 @media only screen and (min-width : 601px) {
-
+    .menu-wrap h2{
+        display:none;
+    }
     #gsrm-top-menu{
         padding-bottom:0;
     }
@@ -87,7 +124,7 @@
     #main-nav span{
         display:none;
     }
-
+    
     /* reveal main submenu */
     #gsrm-sub-menu{
         display:block;
@@ -101,17 +138,37 @@
         color: #fff;
     }
     
+    #gsrm-sub-menu > li > a{
+        margin: 10px 0;
+        display: block;
+        font-weight: bold;
+        border-bottom: 1px solid #fff;
+    }
+    
     #gsrm-sub-menu > .current-menu-item{
         display:block;
         padding-bottom: 1em;
         position: relative;
     }
+    
+    /* columns */
     #gsrm-sub-menu .current-menu-item > .sub-menu > li{
         display: inline-block;
         width: 24%;
         vertical-align:top;
     }
-
+    
+    #gsrm-sub-menu .current-menu-item > .sub-menu > li > a{
+        text-transform: uppercase;
+        font-size: .8em;
+        margin-bottom: 5px;
+    }
+    
+    /* 3d level menus */
+    #gsrm-sub-menu .current-menu-item > .sub-menu > li ul{
+        padding-left: 10px;
+    }
+    
 }
 
 @media only screen and (min-width : 1025px) {
