--- a/menu.css
+++ b/menu.css
@@ -25,7 +25,7 @@
 }
 /* Top menu styles */
 
-.menu-wrap{
+#gsrm-nav{
     position:relative;
 }
 
@@ -33,7 +33,7 @@
     margin-top: 44px;
 }
 
-.menu-wrap h2{
+    #gsrm-nav h2{
   
     width: 30px; height: 30px;
     padding: 7px;
@@ -56,7 +56,7 @@
    
 }
 
-.menu-wrap h2 a{
+#gsrm-nav h2 a{
      font: 0/0 a;
     text-shadow: none;
     color: transparent;    
@@ -108,7 +108,7 @@
 }
 
 @media only screen and (min-width : 601px) {
-    .menu-wrap h2{
+    #gsrm-nav h2{
         display:none;
     }
     #gsrm-top-menu{
